utils/examples/k8s_comparison/kube_llm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-2-llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-2-llm
  template:
    metadata:
      labels:
        app: llama-2-llm
    spec:
      containers:
        - name: llm
          image: sfengineering-servicesnow.registry.snowflakecomputing.com/jeff_db/public/jhollan_repository/fastchat
          ports:
            - containerPort: 8000
      volumeMounts:
        - mountPath: "/mnt/models"
          name: volume
    volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: s3-storage
---
apiVersion: v1
kind: Service
metadata:
  name: llama-2-llm
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: llama-2-llm
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hello-world-one(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: llama-2-llm
                port:
                  number: 80
          - path: /hello-world-two(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld-two
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: llama-2-llm
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /static(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: llama-2-llm
                port:
                  number: 80
